src/test/ui/nll/constant-thread-locals-issue-47053.stderr
error[E0594]: cannot assign to immutable static item `FOO`
  --> $DIR/constant-thread-locals-issue-47053.rs:10:5
   |
LL |     FOO = 6; //~ ERROR cannot assign to immutable static item `FOO` [E0594]
   |     ^^^^^^^ cannot assign

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
